src/index.css
body {
  background: #000;
  color: #eee;
  font: 16px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

button {
  font: inherit;
  border: 1px solid #4f4;
  color: #4f4;
  background: #333;
}

input,
textarea {
  font: inherit;
  border: 1px solid #777;
  color: #777;
  background: #222;
}

a {
  color: #fe9;
}

